style.css: fix some hardcoded colors messing with dark mode

--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -879,7 +879,7 @@ li:hover a.feed:after {
   width: min-content;
   text-align: center;
   border: 1px solid;
-  background: white;
+  background: var(--bg-color);
   border-radius: 6px;
   transform: translateX(-60%) translateY(-115%);
 }
@@ -1137,7 +1137,7 @@ li.comment>div.replies>li.comment {
   margin-top: 12px;
   border: 2px solid cadetblue;
   padding: 12px;
-  background: white;
+  background: var(--bg-color);
   hyphens: auto;
 }
 
@@ -1574,7 +1574,7 @@ body>header>div.logo {
     position: fixed;
     left: 0;
     bottom: 0;
-    background: white;
+    background: var(--bg-color);
     outline: 1px solid Highlight;
     padding: 1rem;
     z-index: 1;
@@ -1651,7 +1651,7 @@ fieldset>*:not([type=hidden],legend) +label{
 
 fieldset>legend {
   font-weight: 500;
-  background-color: white;
+  background-color: var(--bg-color);
   border: 1px outset black;
   padding: 2px 5px;
   border-radius: 2px;
